Fix Java 24 build